# COVID-Tracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  bar_graph.py  common.c  common.h  dijkstra.c  dijkstra.h  header.h  line_graph.py  list.c  list.h  list1.c  list1.h  main.c  person.c  person.h  person_queries.c  person_queries.h  scatter_plot.py  shortest_paths.c  station.c  station.h  vector.c  vector.h
dummy/: Person.c  Persons.h  Stations.c  Stations.h  main.c
